# larql

./: AGENTS.md  Cargo.toml  Makefile  ROADMAP.md  ROADMAP_STATUS.md
.github/workflows/: larql-cli.yml  larql-compute.yml  larql-inference.yml  larql-kv.yml  larql-lql.yml  larql-models.yml  larql-server.yml  larql-vindex.yml  shannon-verify.yml
bench/aim-validation/: README.md  matrix.json
bench/baselines/cpu/: DIAGNOSIS.md  README.md  async-dispatch-2026-05-16.md  gemma3-4b-cpu-after-cached-direct-2026-05-15.json  gemma3-4b-cpu-probe-2026-05-15.json
crates/larql-cli/: coverage-policy.json
crates/larql-cli/docs/: fidelity-spec.md
crates/larql-cli/examples/: patch_down_proj.rs
crates/larql-cli/src/: anyres_tiler.rs  main.rs
crates/larql-compute/: coverage-policy.json
crates/larql-compute-metal/: coverage-policy.json
crates/larql-compute-metal/src/: direct_ops.rs  f32_ops.rs  pipeline.rs
crates/larql-compute-metal/src/decode/: encode_ffn.rs  encode_post_ffn.rs  gpu_timing.rs  moe_combine.rs
crates/larql-compute-metal/src/stages/: ffn.rs  qkv_proj.rs  quant_matvec.rs
crates/larql-compute-metal/src/trait_impl/: matmul.rs  quant_matvec.rs
crates/larql-compute-metal/tests/: test_metal_decode_synthetic.rs  test_metal_shaders.rs  test_pipeline_and_moe.rs
crates/larql-compute/docs/: q4k-decode-kernel.md
crates/larql-compute/examples/: demo_architecture.rs  demo_basic.rs
crates/larql-compute/src/: lib.rs
crates/larql-compute/src/async_compute_backend/: cpu.rs
crates/larql-compute/src/attention/: gqa.rs
crates/larql-compute/src/backend/: capability.rs  helpers.rs  mod.rs  (+1 more)
crates/larql-compute/tests/: test_backend_matmul_quant.rs  test_correctness.rs
crates/larql-inference/: ROADMAP.md  coverage-policy.json
crates/larql-inference/docs/: ffn-build-router.md  walkffn-routing-analysis.md
crates/larql-inference/examples/: bench_hybrid.rs  bench_layer_graph.rs  cpu_gpu_diag.rs  debug_generate.rs  debug_gpu_step.rs  debug_layers.rs  debug_q4k.rs  debug_q6k_v.rs  debug_v_bytes.rs  decode_vs_prefill.rs  memory_audit.rs  moe_grid_generate.rs  profile_walk_ffn.rs  q4k_remote_parity.rs  residual_diff.rs  stage_bisect.rs  walk_benchmark.rs  walk_correctness.rs  walk_path_audit.rs
crates/larql-inference/src/: kv_dispatch.rs  kv_dispatch_cpu.rs  kv_engine.rs  lib.rs  test_utils.rs
crates/larql-inference/tests/: test_arch_golden.rs  test_cpu_metal_parity.rs  test_cpu_v_projection.rs  test_decode_consistency.rs  test_decode_stage_bisect.rs  test_generate_q4k_cpu.rs  test_layer_graph_integration.rs  test_logits_goldens.rs  test_q4k_cached_parity.rs
crates/larql-kv/: Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md
crates/larql-kv/benches/: engine_decode.rs
crates/larql-kv/examples/: async_parity_real_model.rs  vindex_compare.rs
crates/larql-kv/src/: generation.rs  lib.rs  vindex_compare.rs
crates/larql-kv/tests/: accuracy_suite_real_model.rs  dispatch_parity.rs
crates/larql-lql/: coverage-policy.json
crates/larql-lql/src/: repl.rs
crates/larql-lql/tests/: coverage_sweep_synthetic.rs  infer_trace_synthetic.rs
crates/larql-models/: coverage-policy.json
crates/larql-models/src/: config.rs
crates/larql-python/src/: vindex.rs  walk.rs
crates/larql-router/: Cargo.toml  README.md  ROADMAP.md  coverage-policy.json
crates/larql-router-protocol/: Cargo.toml  README.md  coverage-policy.json
crates/larql-router-protocol/proto/: grid.proto
crates/larql-router-protocol/src/: lib.rs
crates/larql-router-protocol/src/transport/: h3.rs  mod.rs  quic.rs
crates/larql-router-protocol/tests/: test_h3_roundtrip.rs  test_quic_roundtrip.rs
crates/larql-router/benches/: routing.rs
crates/larql-router/docs/: hot-shard-demo.md  multi-host-demo.md
crates/larql-router/examples/: embed_grid.rs  static_shards_server.rs
crates/larql-router/src/: admin.rs  cli_helpers.rs  dispatch.rs  grid.rs  http.rs  lib.rs  main.rs  metrics.rs  shards.rs
crates/larql-router/src/grid/: hot_shard.rs  mod.rs  replication.rs  routing.rs  service.rs  testing.rs
crates/larql-router/src/tasks/: rtt_probe.rs
crates/larql-router/src/tasks/rebalancer/: config.rs  eviction.rs  hot_shard.rs  imbalance.rs  mod.rs  replication.rs
crates/larql-router/tests/: test_admin_rpcs.rs  test_grid_chaos.rs  test_grid_service.rs  test_http_handlers.rs
crates/larql-server/: CHANGELOG.md  Cargo.toml  ROADMAP.md  coverage-policy.json
crates/larql-server/benches/: shard_query.rs
crates/larql-server/docs/: router-spec.md
crates/larql-server/examples/: shard_query_demo.rs
crates/larql-server/src/: announce.rs  bootstrap.rs  shard_query.rs  state.rs
crates/larql-server/tests/: test_expert_endpoint.rs  test_expert_endpoints_coverage.rs  test_grid_drain_reassign.rs  test_grid_mode_b.rs  test_grid_replication.rs  test_http_full_routes.rs  test_http_shard.rs  test_openai_chat_coverage.rs  test_shard_query.rs  test_topology_coverage.rs  test_unit_band_utils.rs  test_unit_state.rs
crates/larql-vindex/: ROADMAP.md
crates/larql-vindex-spec/: SPEC.md
crates/larql-vindex-spec/schema/: vindex-v1.schema.json
crates/larql-vindex-spec/src/: lib.rs
crates/larql-vindex/benches/: q4k_vs_f32.rs  vindex_storage_dispatch.rs
crates/larql-vindex/docs/: format-spec.md
crates/larql-vindex/examples/: bench_gate_dequant.rs  build_q4k_weights.rs  diff_ple_quantization.rs  q4k_demo.rs
crates/larql-vindex/src/: mmap_util.rs
crates/larql-vindex/tests/: architecture_contracts.rs  test_fp4_synthetic.rs  test_vindex.rs  test_vindex_to_q4k.rs  test_walker_accuracy.rs
docs/: multi-modal.md
docs/adr/: 0014-hot-shard-load-rate-replication.md  0017-router-metrics.md  0018-moe-expert-routing.md  0019-http3-shard-transport.md  0020-route-backpressure-tier.md
docs/diagnoses/: granite-4.1-tokenizer-packaging-bug.md  granite-4.1-tokenizer-packaging-issue.md
knowledge/scripts/: fetch_wordnet_multilingual_pilot.py  probe_multilingual_pilot.py
scripts/: aim_validation.py  bench-regress.sh  check_coverage_policy.py  demo-hot-shard.sh  diagnose_models.py
tests/fixtures/: shannon_frankenstein_2k.txt
(+208 files in other folders)
