[package]
name = "larql-router-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "gRPC protocol types for the larql-router self-assembling grid"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# QUIC transport (ADR-0010). Optional + opt-in: TCP gRPC remains the
# default. quinn already lives in the workspace lockfile via reqwest, so
# declaring it here as an explicit feature dependency doesn't enlarge the
# dependency closure.
quinn = { version = "0.11", optional = true, default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.13", optional = true }
rustls-pemfile = { version = "2", optional = true }
hyper-util = { version = "0.1", optional = true, features = ["tokio"] }
tower = { version = "0.5", optional = true }
# SHA-256 for cert pinning. Pulled in only with the `quic` feature.
sha2 = { version = "0.10", optional = true }

[features]
default = []
quic = [
    "dep:quinn",
    "dep:rustls",
    "dep:rcgen",
    "dep:rustls-pemfile",
    "dep:hyper-util",
    "dep:tower",
    "dep:sha2",
]

[build-dependencies]
tonic-build = "0.13"

# `protobuf-src` builds a fresh `protoc` via cmake. That works on Linux
# and macOS but fails on the GitHub windows-latest runner — cmake links
# against the debug UCRT and absl drops a pile of unresolved
# `__imp_ceilf` / `__imp_modf` symbols. On Windows we expect `protoc`
# to be on `PATH` (CI installs it via `arduino/setup-protoc`); the
# build script falls back to that.
[target.'cfg(not(windows))'.build-dependencies]
protobuf-src = "2"
