[package]
name = "larql-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Layer-sharding router for distributed larql-server deployments"

[lib]
name = "larql_router"
path = "src/lib.rs"

[[bin]]
name = "larql-router"
path = "src/main.rs"

[dependencies]
larql-router-protocol = { path = "../larql-router-protocol" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.13"
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
futures = "0.3"
futures-core = "0.3"

# rustls is only used when the `quic` feature is on. Pulled in here so the
# `spawn_quic_listener` helper can call `rustls::crypto::ring::default_provider()`
# without re-declaring the dep upstream every time.
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
# `tower::ServiceExt::oneshot` for axum-router unit testing in
# tests/test_http_handlers.rs. Only needed for the HTTP-handler test
# harness; not pulled into the binary.
tower = { version = "0.5", features = ["util"] }

[features]
default = []
# ADR-0010 QUIC transport. Forwards to larql-router-protocol so the same
# feature flag governs both the wire-format crate and the binary that
# uses it. With this off, the router has no UDP socket or TLS code paths.
quic = ["larql-router-protocol/quic", "dep:rustls"]

[[bench]]
name = "routing"
harness = false
